<resources>
  <!-- Common -->
  <string name="title">Заголовок</string>
  <string name="common_author" translatable="false">Ivan Petrov</string>
  <string name="common_genres" translatable="false">Action, Fantasy</string>
  <string name="common_rating" translatable="false">4,8</string>
  <string name="common_pages_num" translatable="false">342</string>
  <string name="common_description">Orphan Harry learns he is a wizard on his 11th birthday when Hagrid escorts him to
    magic-teaching Hogwarts School. As a baby, his mothers love protected him and vanquished the villain Voldemort,
    leaving the child famous as "The Boy who Lived". With his friends Hermione and Ron, Harry has to defeat the returned
    "He Who Must Not Be Named".
  </string>

  <!-- Task List -->
  <string name="task_list_empty">List is empty.</string>

  <!-- Change Task -->
  <string name="change_task_title" translatable="false">@string/title</string>
  <string name="change_task_description" translatable="false">@string/description</string>

  <!-- Create Task -->
  <string name="create_task_title" translatable="false">@string/title</string>
  <string name="create_task_description" translatable="false">@string/description</string>

  <!-- Network Error -->
  <string name="no_internet_connection">Internet problems.\nCheck the connection.</string>
  <string name="repeat_e_conn">Repeat</string>

  <!-- BookDetails -->
  <string name="book_details_reload_btn_text">Reload</string>
  <string name="book_details_reviews_num_text">\u0020reviews</string>
  <string name="book_details_number_of_pages">Number of pages</string>
  <string name="book_details_about_book">About book</string>
  <string name="book_details_more_info_btn_text">More information</string>
  <string name="book_details_similar_books_text">Similar books</string>

  <!-- About Book -->
  <string name="about_book_isbn">isbn</string>
  <string name="about_book_language">language</string>
  <string name="about_book_pages_number">Pages number</string>
  <string name="about_book_authors">Authors</string>
  <string name="about_book">About book</string>

  <!-- Empty favorites/history -->
  <string name="no_favorite_items">There is nothing in the favorites list yet.</string>
  <string name="no_books_read">There are no books in the list.</string>
  <string name="create_task_create">Create</string>
  <string name="change_task_save">Save</string>
  <string name="description">Description</string>

  <!-- Search -->
  <string name="search_is_not_started">Start typing the query text</string>
  <string name="search_nothing_found_by_query">Nothing found by query:</string>

  <!-- MainController search dialog -->
  <string name="search_dialog_movie_item">Movies</string>
  <string name="search_dialog_book_item">Books</string>
  <string name="search_dialog_title">Search</string>

</resources>
