<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">


  <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E2E2E2"
            android:id="@+id/book_details_content_view"
    >
      <LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/book_details_toolbar"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

          <ImageButton
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_arrow_back_24dp"
                  android:id="@+id/book_details_back_btn"
                  android:background="@android:color/transparent"
                  android:layout_gravity="start|center_vertical"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="15dp"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

          <ImageButton
                  android:layout_width="22dp"
                  android:layout_height="wrap_content"
                  android:src="@drawable/ic_history_24dp"
                  android:id="@+id/book_details_add_to_history_btn"
                  android:background="@android:color/transparent"
                  android:layout_gravity="end|center_vertical"
                  android:layout_marginEnd="15dp"
                  app:layout_constraintEnd_toStartOf="@+id/book_details_add_to_want_to_read_btn"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

          <ImageButton
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/outline_turned_in_not_24"
                  android:id="@+id/book_details_add_to_want_to_read_btn"
                  android:background="@android:color/transparent"
                  android:layout_gravity="end|center_vertical"
                  android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginEnd="15dp" app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Title Container -->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:id="@+id/book_details_title_container"
                android:padding="@dimen/book_details_container_padding"
                android:layout_marginBottom="@dimen/book_details_container_bottom_margin">

          <!-- Cover Image -->
          <ImageView
                  android:layout_width="@dimen/book_details_image_cover_width"
                  android:layout_height="@dimen/book_details_image_cover_height"
                  android:id="@+id/book_details_cover_image"
                  android:src="@drawable/test_img"
          />

          <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="15dp"
                  android:orientation="vertical"
          >

            <!-- Title -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/book_details_title_text"
                    android:textColor="@color/text_black_color"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textSize="@dimen/book_details_title_text_size"
                    android:text="@string/title"
            />

            <!-- Author -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/book_details_author_text"
                    android:textColor="@color/text_grey_color"
                    android:textSize="@dimen/book_details_author_text_size"
                    android:maxLines="1"
                    android:text="@string/common_author"
                    android:ellipsize="end"
            />

            <!-- Genres -->
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/book_details_genres_text"
                    android:textColor="@color/text_grey_color"
                    android:text="@string/common_genres"
                    android:textSize="@dimen/book_details_genres_text_size"
                    android:maxLines="1"
                    android:ellipsize="end"
            />

          </LinearLayout>

        </LinearLayout>

        <!-- Small Rating and Pages -->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:id="@+id/book_details_rating_pages_container"
                android:padding="@dimen/book_details_container_padding"
                android:layout_marginBottom="@dimen/book_details_container_bottom_margin">

          <!-- Small Rating -->
          <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_weight="1"
                  android:gravity="center"
          >

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >

              <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/book_details_small_rating_text"
                      android:text="@string/common_rating"
                      android:textColor="@color/text_black_color"
                      android:textSize="@dimen/book_details_small_rating_text_size"
              />

              <ImageView
                      android:layout_width="@dimen/book_details_small_rating_icon_size"
                      android:layout_height="@dimen/book_details_small_rating_icon_size"
                      android:src="@drawable/star_rate_black_18"
              />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >

              <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/text_grey_color"
                      android:textSize="@dimen/book_details_small_rating_reviews_num_text_size"
                      android:id="@+id/book_details_small_rating_num_reviews_text"
              />

              <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/book_details_reviews_num_text"
                      android:textColor="@color/text_grey_color"
                      android:textSize="@dimen/book_details_small_rating_reviews_num_text_size"
              />

            </LinearLayout>

          </LinearLayout>

          <!-- Number of pages -->
          <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_weight="1"
                  android:gravity="center"
          >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/book_details_num_pages_text"
                    android:text="@string/common_pages_num"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/book_details_small_rating_text_size"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_details_number_of_pages"
                    android:textColor="@color/text_grey_color"
                    android:textSize="@dimen/book_details_small_rating_reviews_num_text_size"
            />

          </LinearLayout>

        </LinearLayout>

        <!-- About Book -->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:id="@+id/book_details_about_book_container"
                android:padding="@dimen/book_details_container_padding"
                android:layout_marginBottom="@dimen/book_details_container_bottom_margin">

          <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/book_details_about_book"
                  android:textColor="@color/text_black_color"
                  android:textSize="@dimen/book_details_subtitle_text_size"
                  android:layout_marginBottom="@dimen/book_details_container_padding"
          />

          <!-- Description -->
          <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/book_details_description_text"
                  android:text="@string/common_description"
                  android:maxLines="4"
                  android:ellipsize="end"
                  android:textSize="@dimen/book_details_description_text_size"
                  android:layout_marginBottom="@dimen/book_details_container_padding"
          />

          <Button
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/book_details_more_info_btn_height"
                  android:text="@string/book_details_more_info_btn_text"
                  android:textColor="@color/colorAccent"
                  android:id="@+id/book_details_more_info_btn"
                  android:background="@android:color/transparent"
                  android:textAllCaps="false"
          />

        </LinearLayout>

        <!-- Similar Books -->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:id="@+id/book_details_similar_books_container"
                android:padding="@dimen/book_details_container_padding"

        >

          <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/book_details_similar_books_text"
                  android:textColor="@color/text_black_color"
                  android:textSize="@dimen/book_details_subtitle_text_size"
                  android:layout_marginBottom="@dimen/book_details_container_padding"
          />

          <!-- Similar Books List -->
          <androidx.recyclerview.widget.RecyclerView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/book_details_similar_books_list"
                  tools:listitem="@layout/book_details_similar_books_list_item"
          />

        </LinearLayout>

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Error -->
    <include layout="@layout/network_error"/>

    <!-- Loading -->
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_details_load_progress_bar"
            android:layout_gravity="center"
    />

  </FrameLayout>

</LinearLayout>